Improve menu wrap and fix plot canvas not shrinking when not running

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,11 @@
 .grid-layout {
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: auto minmax(400px, 1fr) auto;
   grid-template-columns: 1fr;
 }
 
 @screen lg {
   .grid-layout {
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto minmax(400px, 1fr);
     grid-template-columns: 2fr 1fr;
   }
 }
